[package]
name = "replay-channel"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/freenet/replay-channel"
description = "A communication channel where new receivers replay all past messages before receiving new ones."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
